--- a/2.html
+++ b/2.html
@@ -13,6 +13,7 @@
 
     <script>
         input = document.getElementById('userInput');
+        parseInt(input);
         function checkInput() {
             if (input.value < 10) {
                 alert('The number is less than 10');
